dev server y estilos scss montados

--- a/src/styles/_commons.scss
+++ b/src/styles/_commons.scss
@@ -72,7 +72,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background: $primary-color-text;
+    background: $primary-color-light;
     padding: 0;
     border: none;
     border-radius: 5px;
