--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,12 @@
-$primary-color-dark:   #388E3C;
-$primary-color:        #4CAF50;
-$primary-color-light:  #C8E6C9;
-$primary-color-text:   #FFFFFF;
+$primary-color-dark:   #FFA000;
+$primary-color:        #FFC107;
+$primary-color-light:  #FFECB3;
+$primary-color-text:   #212121;
 $accent-color:         #9E9E9E;
 $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #BDBDBD;
+
 
 $primary-font-size: 1rem;
 $icons: primary-font-size + .5rem;
