conexion basica con la API

--- a/src/templates/beers-section.html
+++ b/src/templates/beers-section.html
@@ -26,7 +26,7 @@
     </div>
     <div class="card principal">
       <header class="card-header">
-        <h2>First beer</h2>
+        <h2>Second beer</h2>
       </header>
       <div class="card-content">
         <div class="card-content-image">
@@ -51,7 +51,7 @@
     </div>
     <div class="card secondary close">
       <header class="card-header">
-        <h2>First beer</h2>
+        <h2>Third beer</h2>
       </header>
       <div class="card-content">
         <div class="card-content-image">
@@ -76,7 +76,7 @@
     </div>
     <div class="card secondary close">
       <header class="card-header">
-        <h2>First beer</h2>
+        <h2>Fourth beer</h2>
       </header>
       <div class="card-content">
         <div class="card-content-image">
@@ -101,7 +101,7 @@
     </div>
     <div class="card secondary close">
       <header class="card-header">
-        <h2>First beer</h2>
+        <h2>Fifth beer</h2>
       </header>
       <div class="card-content">
         <div class="card-content-image">
@@ -126,7 +126,7 @@
     </div>
     <div class="card secondary close">
       <header class="card-header">
-        <h2>First beer</h2>
+        <h2>Sixth beer</h2>
       </header>
       <div class="card-content">
         <div class="card-content-image">
