--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -4,7 +4,7 @@
     </div>
     <div class="filter-container">
       <form id="search-form" class="filter-input">
-        <input placeholder="search your serie" class="
+        <input placeholder="search your beer" class="
         input search" type="text">
         <button type="submit" class="button search">
           Search
