--- a/src/styles/_commons.scss
+++ b/src/styles/_commons.scss
@@ -114,7 +114,7 @@
           padding: 0 1em 1em 1em;
           font-size: $primary-font-size;
           line-height: 1.3;
-          max-height: 80px;
+          max-height: 100%;
           overflow-y: auto;
           margin-bottom: 10px;
           @include desktop {
