comentario inicial funcionando

--- a/src/templates/detail-template.html
+++ b/src/templates/detail-template.html
@@ -1,14 +1,14 @@
 <section id="detailSection" class="detail-section">
      <div id="detail" class="detail-content"></div>
      <div class="quotes-list">
-       <h2>Quotes</h2>
+       <h2>Comments</h2>
        <div id="quoteList">
        </div>
      </div>
      <form id="quote-form" class="quote-form" novalidate>
        <div class="quote-input">
-         <label for="quote">Quote of this show</label>
-         <input id="quote" placeholder="Add your quote" class="input primary" type="text">
+         <label for="quote">Review this beer</label>
+         <input id="quote" placeholder="Write your opinion" class="input primary" type="text">
        </div>
        <button type="submit" class="button primary">Search</button>
      </form>
