adicion del like

--- a/src/templates/detail-template.html
+++ b/src/templates/detail-template.html
@@ -1,5 +1,6 @@
 <section id="detailSection" class="detail-section">
-     <div id="detail" class="detail-content"></div>
+     <div id="detail" class="detail-content">       
+     </div>
      <div class="quotes-list">
        <h2>Comments</h2>
        <div id="quoteList">
@@ -10,6 +11,6 @@
          <label for="quote">Review this beer</label>
          <input id="quote" placeholder="Write your opinion" class="input primary" type="text">
        </div>
-       <button type="submit" class="button primary">Search</button>
+       <button type="submit" class="button primary">Send</button>
      </form>
    </section>
