--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -10,7 +10,11 @@
           Search
         </button>
       </form>
+      <div class="date-input">
+        From: <input type="month" id="dateInput" value="1970-01">
+      </div>
     </div>
+    
     <div class="navbar-icon">
         <i id="navbar-search" class="fas fa-search"></i>
         <i id="navbar-close"class="fas fa-times"></i>
