--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 $primary-color-dark:   #FFA000;
 $primary-color:        #FFC107;
 $primary-color-light:  #FFECB3;
-$primary-color-text:   #212121;
+$primary-color-text:   #fdfafa;
 $accent-color:         #9E9E9E;
 $primary-text-color:   #212121;
 $secondary-text-color: #757575;
@@ -14,5 +14,5 @@ $header-h2: $primary-font-size + .2rem;
 $logo-font: $primary-font-size + 2rem;
 
 $tablet-width: 768px;
-$desktop-width: 992px;
-$large-desktop-width: 1024px;
+$desktop-width: 1024px;
+$large-desktop-width: 1440px;
