--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,24 +1,33 @@
 <navbar id="navbar" class="app-navbar no-search">
+  <picture class="photoPicture" >
+    <source srcset="
+      ../images/beers-md.jpg 1020w,
+      ../images/beers-bg.jpg 1024w
+      " 
+      media="(min-width: 1024px)">
+    <source srcset="
+      ../images/beers-bg-lg2.jpg 425w,
+      ../images/beers-bg.jpg 768w,   
+      ../images/beers-desktop.jpg 1024w
+      " 
+      media="(min-width: 768px)">
 
-
-    <picture>
-        <source srcset="
-          ../images/beers-desktop.jpg 1280w,
-          ../images/beers-bg.jpg 800w,
-          ../images/beers-bg-lg2.jpg 320w,
-          " media="(min-width: 768px)">
-        <source srcset="../images/beers-md.jpg" media="(min-width: 320px)">
+    <source srcset="
+      ../images/beers-bg-lg2.jpg 425w,
+      ../images/beers-bg.jpg 768w,
+      ../images/beers-desktop.jpg 1624w
+      " 
+      media="(min-width: 425px)">
     
-        <img src="../images/beers-bg3.jpg" alt="cerveza">
-    </picture>
+    <img src="../images/beers-bg3.jpg" alt="cerveza">
+  </picture>
   <div class="navbar-logo">
-
     <a href="/">BeerFlix</a>
   </div>
   <div class="filter-container">
     <form id="search-form" class="filter-input">
       <input placeholder="search your beer" class="
-        input search" type="text">
+      input search" type="text">
       <button type="submit" class="button search">
         Search
       </button>
@@ -27,9 +36,8 @@
       From: <input type="month" id="dateInput" value="2000-01">
     </div>
   </div>
-
   <div class="navbar-icon">
-    <i id="navbar-search" class="fas fa-search"></i>
-    <i id="navbar-close" class="fas fa-times"></i>
+      <i id="navbar-search" class="fas fa-search"></i>
+      <i id="navbar-close"class="fas fa-times"></i>
   </div>
 </navbar>
