--- a/src/styles/_mainSection.scss
+++ b/src/styles/_mainSection.scss
@@ -1,26 +1,20 @@
 
 .beer-section {
-    grid-area: main;
-    & > div {
-      margin: 20px 0;
-      @include desktop {
-        margin: 0;
-      }
-    }
-    @include desktop {
-      margin: 20px 0 40px;
-      display: grid;
-      grid-gap: 30px;
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: minmax(200px, max-content) 250px;
-    }
-    .principal {
-      grid-column: 1 / 3;
-    }
-    .principal:nth-child(2) {
-      grid-column: 3 / 5;
-    }
-    .secondary {
-      grid-row: 2 / 3;
+  grid-area: main;
+  & > div {
+    margin: 20px 0;
+  }
+  @include desktop {
+    margin: 0 0 40px;
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: 50% 50%;
+  } 
+  .principal,
+  .secondary {
+    grid-column: 1 / 3;
+    @include desktop{
+      grid-column: auto;
     }
   }
+}
