--- a/src/styles/detail.scss
+++ b/src/styles/detail.scss
@@ -40,6 +40,7 @@ main {
 }
 
 .detail-section {
+  
   .loader {
     display: none;
   }
@@ -59,7 +60,6 @@ main {
     padding-top: 50px;
     width: 100%;
     @include desktop {
-      
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -68,11 +68,14 @@ main {
   }
   .title-section {
     color: $primary-text-color;
-    font-size: $icons + 1rem;
+    font-size: $icons + 2rem;
     text-align: center;
-    margin: 10px 0;
+    margin: auto;
+    width: 50%;
+    padding: 1rem 0;
   }
   .image-container {
+    padding-top: 1rem;
     width: 100%;
     margin: 0 auto;
     @include desktop {
@@ -81,9 +84,26 @@ main {
     img {
       width: 20%;
       height: 20%;
+      display: block;
+      margin: auto;
       @include desktop {
         border-radius: 25px;
       }
+    }
+    
+  }
+  .title-section,
+    .image-container {
+      background-color: $primary-color-light;
+      border-radius: 25px;
+    }
+  .content {
+    
+    .label {
+
+    }
+    .likes {
+      float: right;
     }
   }
   .quotes-list {
@@ -103,6 +123,7 @@ main {
       padding: 20px 0;
     }
   }
+  
   .content,
   .quote-form,
   .quotes-list {
