añadido efecto crackle en la lista de cervezas

--- a/src/styles/_commons.scss
+++ b/src/styles/_commons.scss
@@ -82,8 +82,8 @@
   .card-header {
     padding: 1em;
     h2 {
+      font-family: 'Black Ops One';
       font-size: $header-h2;
-      color: $primary-text-color;
     }
   }
   .card-content,
