webpack production added

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,25 +1,25 @@
 <navbar id="navbar" class="app-navbar no-search">
   <picture class="photoPicture" >
     <source srcset="
-      ../images/beers-md.jpg 1020w,
-      ../images/beers-bg.jpg 1024w
+      /images/beers-md.jpg 1020w,
+      /images/beers-bg.jpg 1024w
       " 
       media="(min-width: 1024px)">
     <source srcset="
-      ../images/beers-bg-lg2.jpg 425w,
-      ../images/beers-bg.jpg 768w,   
-      ../images/beers-desktop.jpg 1024w
+      /images/beers-bg-lg.jpg 425w,
+      /images/beers-bg.jpg 768w,   
+      /images/beers-desktop.jpg 1024w
       " 
       media="(min-width: 768px)">
 
     <source srcset="
-      ../images/beers-bg-lg2.jpg 425w,
-      ../images/beers-bg.jpg 768w,
-      ../images/beers-desktop.jpg 1624w
+      /images/beers-bg-lg.jpg 425w,
+      /images/beers-bg.jpg 768w,
+      /images/beers-desktop.jpg 1624w
       " 
       media="(min-width: 425px)">
     
-    <img src="../images/beers-bg3.jpg" alt="cerveza">
+    <img src="/images/beers-bg2.jpg" alt="Cheers!">
   </picture>
   <div class="navbar-logo">
     <a href="/">BeerFlix</a>
